tests/errors/sem.type-mismatch.bin-order.or
main :: () -> void {
    x := 6u;
    y := 6.5;
    x < y;
};
